Finish CSS Foundations

--- a/html-foundations/odin-recipes/recipes/hamburger.html
+++ b/html-foundations/odin-recipes/recipes/hamburger.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Hamburger</title>
 </head>
 
 <body>
-    <h1>Hamburger</h1>
+    <h1 class="title">Hamburger</h1>
     <img src="../images/hamburger.jpg" alt="hamburger">
-    <h2>Description</h2>
-    <p>
+    <h2 class="description">Description</h2>
+    <p class="p">
         Les lasagnes (lasagna, en italien) sont à la fois des pâtes alimentaires en forme de feuilles rectangulaires,
         ainsi qu'une recette de cuisine italienne à base de couches alternées de pâtes lasagnes,
         parmesan, mozzarella, ou ricotta, et de sauce bolognaise ou sauce béchamel, gratiné au four.
@@ -25,8 +26,8 @@
     </p>
     </p>
 
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="description">Ingredients</h2>
+    <ul class="steps">
         <li>1 pound sweet Italian sausage</li>
         <li>¾ pound lean ground beef</li>
         <li>½ cup minced onion</li>
@@ -49,8 +50,8 @@
         <li>¾ cup grated Parmesan cheese</li>
     </ul>
 
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="description">Steps</h2>
+    <ol class="steps">
         <li>
             In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. 
             Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. 
