--- a/html-foundations/odin-recipes/index.html
+++ b/html-foundations/odin-recipes/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
 
-    <ul>
-        <li><a href="./recipes/lasagne.html"><strong>Lasagne recipe</strong></a></li>
-        <li><a href="./recipes/hamburger.html"> <strong>Hamburger recipe</strong></a></li>
-        <li><a href="./recipes/pizza.html"> <strong>Pizza recipe</strong></a></li>
+    <ul class="list">
+        <li><a href="./recipes/lasagne.html" class="list lasagna"><strong>Lasagne recipe</strong></a></li>
+        <li><a href="./recipes/hamburger.html" class="list hamburger"> <strong>Hamburger recipe</strong></a></li>
+        <li><a href="./recipes/pizza.html" class="list pizza"> <strong>Pizza recipe</strong></a></li>
     </ul>
 
 </body>
