--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -10,7 +10,21 @@
 
 <body>
 <h1>javascript</h1>
-    <script src="javascript.js"></script>
+ 
+    
+
+    <label for="weather">Select the weather type today: </label>
+<select id="weather">
+  <option value="">--Make a choice--</option>
+  <option value="sunny">Sunny</option>
+  <option value="rainy">Rainy</option>
+  <option value="snowing">Snowing</option>
+  <option value="overcast">Overcast</option>
+</select>
+
+<p></p>
+
+<script src="javascript.js"></script>
 </body>
 
 </html>
